Update styles and content

--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -11,7 +11,9 @@ $heading: #0E1317;
 
 $text-color: #666666;
 
-$primary: #DF3F00;
+$primary: #11492C;
+$secondary: #11492C;
+$white: #ffffff;
 
 
 // Responsive Variables
