--- a/public/assets/scss/sections/_faq.scss
+++ b/public/assets/scss/sections/_faq.scss
@@ -31,7 +31,7 @@
                     align-items: center;
                     justify-content: space-between;
                     padding: 20px 30px;
-                    background-color: rgba(223, 63, 0, 0.07);
+                    background-color: #E8F4EA;
                     border: 1px solid rgba(0, 0, 0, 0.1);
                     border-radius: 5px;
                     font: 400 27px $forum;
