--- a/public/assets/scss/_common.scss
+++ b/public/assets/scss/_common.scss
@@ -331,7 +331,7 @@ ul.ratings{
     background-color: $primary;
 }
 .light-red-bg{
-    background-color: rgba(223, 63, 0, 0.07);
+    background-color: #E8F4EA;
 }
 .light-gray-bg{
     background-color: #FBF8F5;
@@ -359,7 +359,7 @@ button{
         margin-inline-start: 10px;
     }
     &.btn-red{
-        background-color: #DF3F00;
+        background-color: $primary;
         &:hover{
             background-color: $heading;
             color: #fff;
