--- a/public/assets/scss/sections/_features.scss
+++ b/public/assets/scss/sections/_features.scss
@@ -20,7 +20,7 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
-            background-color: rgba(223, 63, 0, 0.07);
+            background-color: #E8F4EA;
             z-index: -1;
         }
         & i{
