--- a/public/assets/scss/sections/_footer.scss
+++ b/public/assets/scss/sections/_footer.scss
@@ -49,7 +49,7 @@
 .about-company-widget{
     & .footer-content{
         & .footer-logo{
-            background-color: $primary;
+            background-color: $white;
             padding: 20px 35px;
         }
         & > p{
