--- a/public/assets/scss/sections/_hero.scss
+++ b/public/assets/scss/sections/_hero.scss
@@ -7,7 +7,7 @@
 /*====== Banner One ======*/ 
 
 .banner-one{
-    background-color: rgba(223, 63, 0, 0.07);
+    background-color: #E8F4EA;
     padding: 240px 0 60px;
     @media #{$xs}{
         padding: 180px 0 60px;
