--- a/public/assets/scss/sections/_blog.scss
+++ b/public/assets/scss/sections/_blog.scss
@@ -149,7 +149,7 @@
 }
 
 .blog-quote-item{
-    background-color: #FCECE6;
+    background-color: #E8F4EA;
     padding: 32px 40px 36px;
     & .entry-content{
         & h3.title{
@@ -525,7 +525,7 @@
     }
     & .comment-form{
         & .form_control{
-            background-color: #FDF5F2;
+            background-color: #E8F4EA;
             border: 1px solid rgba(14, 19, 23, 0.1);
             border-radius: 5px;;
             margin-bottom: 20px;
