--- a/public/assets/scss/sections/_elements.scss
+++ b/public/assets/scss/sections/_elements.scss
@@ -218,7 +218,7 @@ ul.slick-dots{
 .single-hour-box{
     & h4.title{
         padding: 22px 45px;
-        background: url(../images/shape/hour-bg-1.png) no-repeat;
+        background: url(../images/shape/hour-bg-1.svg) no-repeat;
         background-size: cover;
         text-align: center;
         color: #fff;
