--- a/public/assets/scss/sections/_products.scss
+++ b/public/assets/scss/sections/_products.scss
@@ -58,7 +58,7 @@
 
 .single-product-item{
     padding: 35px 30px;
-    background-color: #FDF5F2;
+    background-color: #E8F4EA;
     border: 1px solid rgba(14, 19, 23, 0.07);
     @media #{$lg}{
         padding: 35px 20px;
@@ -318,7 +318,7 @@
     }
     & .review-form{
         & .form_control{
-            background-color: #FDF5F2;
+            background-color: #E8F4EA;
             border: 1px solid rgba(14, 19, 23, 0.1);
             height: 60px;
             margin-bottom: 20px;
