--- a/public/assets/scss/sections/_reservation.scss
+++ b/public/assets/scss/sections/_reservation.scss
@@ -165,7 +165,7 @@ form.reservation-form{
         & .nice-select,
         & .form_control{
             height: 70px;
-            background-color: #FDF5F2;
+            background-color: #E8F4EA;
             border: 1px solid rgba(14, 19, 23, 0.1);
             border-radius: 5px;
             margin-bottom: 30px;
