--- a/public/assets/scss/sections/_menu.scss
+++ b/public/assets/scss/sections/_menu.scss
@@ -126,7 +126,7 @@
 
 
 .single-menu-item-three{
-    background-color: #FDF5F2;
+    background-color: #E8F4EA;
     border: 1px solid rgba(14, 19, 23, 0.1);
     padding: 20px 30px;
     display: flex;
