--- a/public/assets/scss/sections/_sections.scss
+++ b/public/assets/scss/sections/_sections.scss
@@ -55,7 +55,7 @@
         content: '';
         width: 100%;
         height: 100%;
-        background-color: rgba(223, 63, 0, 0.9);
+        background-color: $primary;
         z-index: -1;
     }
 }
