--- a/public/assets/scss/sections/_header.scss
+++ b/public/assets/scss/sections/_header.scss
@@ -264,7 +264,7 @@
 			box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 			display: block;
 			overflow-x: hidden;
-			overflow-y: scroll;
+			overflow-y: auto;
 			&.menu-on {
 				left: 0;
 			}
