--- a/public/assets/scss/sections/_blog.scss
+++ b/public/assets/scss/sections/_blog.scss
@@ -335,7 +335,7 @@
 
 .post-author-box{
     padding: 40px 40px 35px;
-    background-color: #FDF1ED;
+    background-color: #E8F4EA;
     border: 1px solid rgba(14, 19, 23, 0.1);
     @media #{$xs}{
         flex-direction: column;
@@ -444,7 +444,7 @@
 
 
 .comments-area{
-    background-color: #FDF1ED;
+    background-color: #E8F4EA;
     border: 1px solid rgba(14, 19, 23, 0.1);
     padding: 52px 40px 30px;
     @media #{$xs}{
