--- a/public/assets/scss/sections/_contact.scss
+++ b/public/assets/scss/sections/_contact.scss
@@ -30,7 +30,7 @@
 
 .contact-form-one{
     & .form_control{
-        background-color: #FDF1ED;
+        background-color: #E8F4EA;
         border: 1px solid rgba(14, 19, 23, 0.1);
         border-radius: 5px;
         height: 70px;
