--- a/public/assets/scss/sections/_faq.scss
+++ b/public/assets/scss/sections/_faq.scss
@@ -77,7 +77,7 @@
                 margin-inline-start: auto;
             }
             &[aria-expanded=true]{
-                background-color: #FDF1ED;
+                background-color: #E8F4EA;
                 &:after{
                     content: '\f063';
                 }
