--- a/public/assets/scss/sections/_menu.scss
+++ b/public/assets/scss/sections/_menu.scss
@@ -236,7 +236,7 @@
     position: relative;
     z-index: 1;
     padding: 40px 45px;
-    background-color: #FDF1ED;
+    background-color: #E8F4EA;
     border: 1px solid rgba(0, 0, 0, 0.1);
     @include transition(.3s);
     &:hover{
