--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+  html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+  }
 body {
   min-height: 200vh;
 }
