fix and cleanup

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4217,6 +4217,9 @@ form.reservation-form .nice-select ul.list {
     line-height: 32px;
   }
 }
+.blog-details-wrapper .blog-post .main-post p{
+  margin-bottom: 15px;
+}
 .blog-details-wrapper .blog-post .main-post .entry-content > p {
   margin-bottom: 35px;
 }
